syntax = "proto3";

option csharp_namespace = "Distributor.Grpc";

// پیام Health
message HealthRequest {
  string id = 1;
  string systemTime = 2;
  int32 numberOfConnectedClients = 3;
}

message HealthResponse {
  bool isEnabled = 1;
  int32 numberOfActiveClients = 2;
  string expirationTime = 3;
}

// پیام‌های صف و پردازش
message QueueMessage {
  int32 id = 1;
  string sender = 2;
  string message = 3;
}

message ProcessedMessage {
  int32 id = 1;
  string engine = 2;
  int32 messageLength = 3;
  bool isValid = 4;
  map<string,bool> regexResults = 5;
}

message IntroMessage {
  string id = 1;
  string type = 2;
}

// سرویس gRPC
service DistributorService {
  rpc CheckHealth (HealthRequest) returns (HealthResponse);

  // Bi-directional streaming برای پیام‌های صف
  rpc Connect(stream IntroMessage) returns (stream QueueMessage);
  // rpc SubmitProcessed(stream ProcessedMessage) returns (Empty); // اختیاری
}
